@startuml

class InventoryTrackerController
{
currentSerialNumber : String
displayedItems : ObservableList<Item>
addItemButtonClicked()
deleteButtonClicked()
editStart()
editCommit()
searchBarTyped()
saveButtonClicked()
openButtonClicked()
warningDialogHandler()
updateTableView()
clearTextFields()
}

class InventoryList
{
itemList : TreeMap
addItem()
editItem()
deleteItem()
getItemList()
getItemObservableList()
getSearchResults()
}

class Item
{
serialNumber : String
itemName : String
price : String
getSerialNumber()
getItemName()
getPrice()
setSerialNumber()
setItemName()
setPrice()
}

class FileManager
{
selectedFile : File
getFileType()
getJSONString()
getHTMLString()
getTSVString()
save()
getFileInput()
getItemList()
}

class Validator
{
validateItemName()
validateSerialNumber()
validatePrice()
}

InventoryTrackerController -- InventoryList
InventoryList -- Item
InventoryTrackerController -- FileManager
InventoryTrackerController -- Validator

@enduml